Add endpoint to get chart default values (#1678)
Related to #1632
